add validation to forms